Remove some usage of Google ImmutableMap [HZ-4214] (#511)
GitOrigin-RevId: e936d66ddea07a64410fd34d03d1d9344c6d4c97